[gd_scene load_steps=2 format=3 uid="uid://jida1cnc03um"]

[ext_resource type="Script" uid="uid://dsnsjjq5kuc1g" path="res://script/canvas_layer.gd" id="1_xp8f4"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_xp8f4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Coins: 0"

[node name="PlotButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "+1 Plot"

[node name="HelperButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "+1 Helper"

[node name="OnionButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Unlock Onion"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlotButton" to="." method="_on_plot_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HelperButton" to="." method="_on_helper_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OnionButton" to="." method="_on_onion_button_pressed"]
